--- a/src/server/requirements.txt
+++ b/src/server/requirements.txt
@@ -2,8 +2,10 @@ autopep8==1.4.4
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
+coloredlogs==10.0
 Flask==1.1.1
 Flask-SocketIO==4.2.1
+humanfriendly==4.18
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
@@ -11,13 +13,16 @@ MarkupSafe==1.1.1
 numpy==1.17.4
 opencv-python==4.1.1.26
 pycodestyle==2.5.0
+pygame==1.9.6
 PyQt5==5.9.2
 PyQt5-sip==12.7.0
 python-engineio==3.10.0
 python-socketio==4.3.1
 requests==2.22.0
+SimpleWebSocketServer==0.1.1
 sip==4.19.8
 six==1.13.0
+socketIO-client-nexus==0.7.6
 urllib3==1.25.7
 websocket-client==0.56.0
 Werkzeug==0.16.0
