--- a/src/server/requirements.txt
+++ b/src/server/requirements.txt
@@ -5,6 +5,7 @@ Click==7.0
 coloredlogs==10.0
 Flask==1.1.1
 Flask-SocketIO==4.2.1
+gunicorn==20.0.4
 humanfriendly==4.18
 idna==2.8
 itsdangerous==1.1.0
