[Update] Procfile (+5 squashed commits) Squashed commits: [625783e] [Update] Procfile [9945fed] [Update] Procfile [9bb0548] [Update] Procfile [b56f8f4] [Update] Procfile [af07c31] [Update] Procfile

--- a/src/server/Procfile
+++ b/src/server/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn --worker-class socketio.sgunicorn.GeventSocketIOWorker run:app
+web: gunicorn -k geventwebsocket.gunicorn.workers.GeventWebSocketWorker -b 0.0.0.0:$PORT module:app
