--- a/src/server/requirements.txt
+++ b/src/server/requirements.txt
@@ -5,6 +5,9 @@ Click==7.0
 coloredlogs==10.0
 Flask==1.1.1
 Flask-SocketIO==4.2.1
+gevent==1.4.0
+gevent-websocket==0.10.1
+greenlet==0.4.15
 gunicorn==20.0.4
 humanfriendly==4.18
 idna==2.8
