--- a/src/server/Procfile
+++ b/src/server/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn -k geventwebsocket.gunicorn.workers.GeventWebSocketWorker -b 0.0.0.0:$PORT module:app
+web: gunicorn --workers=1 -k geventwebsocket.gunicorn.workers.GeventWebSocketWorker -b 0.0.0.0:$PORT module:app
